--- a/DBMS project/style.css
+++ b/DBMS project/style.css
@@ -1,4 +1,5 @@
 body{
+
     margin: 0;
     padding: 10;
     background: url(/Project2_CSS/images/backg2.png);
@@ -8,6 +9,7 @@ body{
 }
 
 .login_box{
+    font-family: 'Aclonica';font-size: 22px;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-right: 5;
