--- a/DBMS project/style.css
+++ b/DBMS project/style.css
@@ -2,16 +2,16 @@ body{
 
     margin: 0;
     padding: 10;
-    background: url(/Project2_CSS/images/backg2.png);
+    background: url("/DBMS project/images/backg2.png");
     background-size: cover;
     font-family: Times;
     overflow : hidden ;
 }
 
 .login_box{
-    font-family: 'Aclonica';font-size: 22px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+
+    padding-top: 2px;
+    padding-bottom: 2px;
     padding-right: 5;
     padding-left: 5;
     top : 50%;
@@ -26,6 +26,8 @@ body{
 }
 
 .login_box h3{
+    font-family: cursive ;
+    font-size: 22px;
     text-align: center;
     padding : 0px 10px 10px 10px;
     border-bottom: 5px solid rgb(4, 221, 4);
@@ -92,20 +94,44 @@ input[type="submit"]:hover{
     font-weight: 600;
 }
 
-.signup{
-    margin: -5px 0 20px 5px;
+footer{
+    position: absolute;
+    bottom: 0; left: 0; right: 0;
+    background : transparent;
+    height: auto;
+    width: 100vw;
+    font-family: cursive;
+    padding-top: 2px;
+    color: rgb(4, 221, 4);
+}
+.footer-content{
+    display: flex;
+    margin-top: 1px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     text-align: center;
-    font-size: 20px;
-    color: red;
+    border: 3px solid red;
+    font-size: small;
+    color: black;
+    font-family: 'Times New Roman', Times, serif;
     font-weight: 600;
+    text-transform: capitalize;
+    word-spacing: 5px;
+    font-size: x-small;
+}
+.footnote{
+    display: flex;
+
+    align-content: center;
+    justify-content: center;
+    border: 3px solid red;
+    font-family: serif;
+    font-weight: 900;
+    color: black;
+    /* font-size: x-large; */
+    align-content: center;
+    /* line-height: 3rem; */
+
 }
 
-.signup a{
-    color: cyan;
-    text-decoration: none;
-}
-.signup a:hover{
-    color: rgb(4, 221, 4);
-    text-decoration: underline rgb(4, 221, 4);
-    font-size: 22px;
-}
