--- a/DBMS project/style.css
+++ b/DBMS project/style.css
@@ -9,7 +9,7 @@ body{
 }
 
 .login_box{
-
+    border: 3px solid red;
     padding-top: 2px;
     padding-bottom: 2px;
     padding-right: 5;
@@ -98,40 +98,27 @@ footer{
     position: absolute;
     bottom: 0; left: 0; right: 0;
     background : transparent;
-    height: auto;
-    width: 100vw;
-    font-family: cursive;
-    padding-top: 2px;
+    height: 25px;
+    width: 100%;
+    /* font-family: cursive; */
+    /* padding-top: 2px; */
     color: rgb(4, 221, 4);
+    /* border: 3px solid red; */
+
+
 }
+
 .footer-content{
-    display: flex;
-    margin-top: 1px;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    position: absolute; bottom : 0; left: 50%;
     text-align: center;
-    border: 3px solid red;
-    font-size: small;
+    /* border: 3px solid red; */
+    font-size: 18px;
     color: black;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Times New Roman';
     font-weight: 600;
     text-transform: capitalize;
     word-spacing: 5px;
-    font-size: x-small;
-}
-.footnote{
-    display: flex;
-
-    align-content: center;
-    justify-content: center;
-    border: 3px solid red;
-    font-family: serif;
-    font-weight: 900;
-    color: black;
-    /* font-size: x-large; */
-    align-content: center;
-    /* line-height: 3rem; */
-
+    left: 0; margin-left: auto;
+    right: 0; margin-right: auto;
 }
 
