--- a/DBMS project/style.css
+++ b/DBMS project/style.css
@@ -1,16 +1,34 @@
 body{
-
-    margin: 0;
-    padding: 10;
-    background: url("/DBMS project/images/backg2.png");
+    margin: 0; padding: 0;
+    height : 100%;
+    /* padding: 10; */
+    background: url("/DBMS project/images/backg9.jpg");
     background-size: cover;
     font-family: Times;
     overflow : hidden ;
+    /* border: 3px solid red; */
+}
+
+.title{
+    /* border: 3px solid red; */
+    position : relative;
+    height: 60px;
+    text-align: center;
+    font-size: 70px;
+    top: 0;
+    left: 0; margin-left: auto;
+    right:0; margin-right : auto;
+    color: white;
+    /* bottom: 0; */
+}
+.title :hover{
+    transition: 0.6s ease-in;
+    color: red;
 }
 
 .login_box{
-    border: 3px solid red;
-    padding-top: 2px;
+    /* border: 3px solid red; */
+    padding-top: 40px;
     padding-bottom: 2px;
     padding-right: 5;
     padding-left: 5;
@@ -71,6 +89,7 @@ form .txtbox{
 }
 .forgot:hover{
     text-decoration: underline red;
+    color: red;
 }
 
 input[type="submit"]{
@@ -113,7 +132,7 @@ footer{
     text-align: center;
     /* border: 3px solid red; */
     font-size: 18px;
-    color: black;
+    color: white;
     font-family: 'Times New Roman';
     font-weight: 600;
     text-transform: capitalize;
