faster commiting and pushing files

--- a/DBMS project/style.css
+++ b/DBMS project/style.css
@@ -9,6 +9,7 @@ body{
     /* border: 3px solid red; */
 }
 
+/* faster staging, commiting and pushing */
 
 .title{
     /* border: 3px solid red; */
