--- a/DBMS project/HomePage/homepage.css
+++ b/DBMS project/HomePage/homepage.css
@@ -2,78 +2,89 @@ body{
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
-    /* position: relative; */
-    /* height: 100%;
-    width: 100%; */
+    /* position: relative;  */
+    /* height: 100%;     */
+    /* width: 100%; */
 }
 
 header{
-    position : fixed;
+    z-index: 1;
+    position: fixed;
     background:black ;
     padding : 20px;
     width: 100%;
     height: 30px;
     /* border: red solid 2px; */
-    position: relative;
 }
 .left img{
     /* border: red solid 2px; */
-    position: absolute;
+    position: fixed;
     left: 5px;
     top: 5px;
 }
 .right{
-    position: absolute;
-    right: 60px;
+    position: fixed;
+    right: 10px;
     top: 12px;
 }
 .b1{
     /* border: red solid 2px; */
-    background: blueviolet;
+    background: rgb(51, 155, 252);
     text-decoration: none;
     padding: 10px 20px;
     font-size: 15px;
     color: white;
-    font-weight: 800;
     cursor: pointer;
-    transition: 0.8s;
+    font-weight: 800;
+    transition: 0.6s;
 }
 .b1:hover{
     background: red;
+    /* text-decoration: under   line; */
+    /* font-weight: 700; */
 }
 
 .navbar{
-    position: relative;
+    position: fixed;
     /* border: red solid 2px; */
-    background: #747474;
+    background: #4d4d4d;
     padding: 30px;
-    width: 200px;
+    width: 180px;
     height: 100vh;
+    left: 0px;
+    transition: 0.5s ease-in;
+    transition-property: left;
+    /* overflow: hidden; */
 }
-
+.ProfilePic{
+    position: absolute;
+    left: 45px;
+    top: 80px;
+    /* border: red solid 2px; */
+    width: 150px;
+    height: 150px;
+    border-radius: 100px;
+    transition: 0.5s;
+}
 /* got to position this better !!! */
 .navbar h4{
     position: absolute;
-    top: 150px;
+    text-align: center;
+    top: 210px;
     left: 50%;
     transform: translateX(-50%);
     text-decoration: none;
     font-size: 25px;
 }
-.ProfilePic{
-    position: absolute;
-    left: 45px;
-    top: 10px;
-    /* border: red solid 2px; */
-    width: 150px;
-    height: 150px;
-    border-radius: 100px;
+.navbar i{
+    font-size: 30px;
 }
+
 .navbar .options{
     /* border: red solid 2px; */
     position: absolute;
     width: 100%;
-    top: 250px;
+    top: 300px;
     left: 0px;
 }
 .navbar .options a{
@@ -91,4 +102,57 @@ header{
 }
 .navbar .options a:hover{
     background: rgb(3, 196, 196);
+}
+.navbar .options i{
+    padding-right: 10px;
+}
+
+
+label #navbarbtn{
+    z-index: 1;
+    color: #fff;
+    cursor: pointer;
+    position: fixed;
+    top: 80px;
+    font-size: 30px;
+    margin: 5px 0;
+    left: 15px;
+    transition : 0.5s;
+}
+label #navbarbtn:hover{
+    color: rgb(3, 196, 196);
+}
+#bars{
+    display: none;
+}
+#bars:checked ~.navbar span{
+    display: none;
+}
+#bars:checked ~.navbar{
+    left: -180px;
+}
+#bars:checked ~.navbar img{
+    left: -10px;
+}
+#bars:checked ~.navbar a{
+    /* text-align: center; */
+    font-size: 30px;
+    margin-left: 180px;
+    /* width: 80px; */
+}
+
+
+.content img{
+    min-height: 100%;
+    z-index: -1;
+    min-width: 1024px;
+    width: 100%;
+    height: auto;
+    position: fixed;
+    top: 0; left: 0;
+    background-size: cover;
+    /* transition: 0.5s ease-in; */
+}
+/* #bars:checked ~.content img{ */
+    /* margin-left: 20px; */
 }
