--- a/DBMS project/HomePage/homepage.css
+++ b/DBMS project/HomePage/homepage.css
@@ -10,7 +10,7 @@ body{
 header{
     z-index: 1;
     position: fixed;
-    background:black ;
+    background: black ;
     padding : 20px;
     width: 100%;
     height: 30px;
@@ -33,7 +33,7 @@ header{
     text-decoration: none;
     padding: 10px 20px;
     font-size: 15px;
-    color: white;
+    color: #c5c6c7;
     cursor: pointer;
     font-weight: 800;
     transition: 0.6s;
@@ -47,7 +47,7 @@ header{
 .navbar{
     position: fixed;
     /* border: red solid 2px; */
-    background: #4d4d4d;
+    background: #1f2833;
     padding: 30px;
     width: 180px;
     height: 100vh;
@@ -75,6 +75,7 @@ header{
     transform: translateX(-50%);
     text-decoration: none;
     font-size: 25px;
+    color: #66fcf1;
 }
 .navbar i{
     font-size: 30px;
@@ -90,7 +91,7 @@ header{
 .navbar .options a{
     /* border: red solid 2px; */
     display: block;
-    color: white;
+    color: #66fcf1;
     text-decoration: none;
     font-size: 18px;
     padding-left: 13px;
@@ -110,7 +111,7 @@ header{
 
 label #navbarbtn{
     z-index: 1;
-    color: #fff;
+    color: #66fcf1;
     cursor: pointer;
     position: fixed;
     top: 80px;
@@ -119,6 +120,7 @@ label #navbarbtn{
     left: 15px;
     transition : 0.5s;
 }
+
 label #navbarbtn:hover{
     color: rgb(3, 196, 196);
 }
