--- a/DBMS project/Index/style.css
+++ b/DBMS project/Index/style.css
@@ -88,6 +88,7 @@ form .txtbox{
 
 .forgot{
     margin: -5px 0 20px 5px;
+    padding-top: 10px;
     color: grey;
     font-weight: 600;
     cursor: pointer;
